# coyo

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
apps/api/: .env.example  .venv  Dockerfile  alembic.ini  cloudrun-service.yaml  deploy.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260220_000000_0001_initial_schema.py  20260220_000001_0002_add_device_id_to_users.py  20260309_000000_0003_add_firebase_auth.py  20260311_000000_0004_remove_device_id.py
apps/api/scripts/: create_e2e_user.py  export_openapi.py
apps/api/src/coto/: __init__.py  config.py  db.py  dependencies.py  exceptions.py  main.py  middleware.py
apps/api/src/coto/models/: __init__.py  conversation.py  correction.py  turn.py  user.py
apps/api/src/coto/repositories/: __init__.py  conversation.py  history.py  turn.py  user.py
apps/api/src/coto/routers/: conversations.py  history.py
apps/api/src/coto/schemas/: turn.py  (+3 more)
apps/api/src/coyo/: __init__.py  config.py  db.py  dependencies.py  exceptions.py  main.py  middleware.py  rate_limit.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/integration/: __init__.py  test_conversations_api.py  test_error_handling.py  test_health.py  test_history_api.py  test_rate_limit.py
apps/api/tests/unit/: __init__.py  test_auth_router.py  test_config.py  test_conversation_service.py  test_correction.py  test_dependencies.py  test_exceptions.py  test_firebase_service.py  test_llm.py  test_main.py  test_middleware.py  test_rate_limit.py  test_repositories.py  test_schemas.py  test_stt.py  test_tts.py  test_user_repository.py
(+196 files in other folders)
